# django-task-manager

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  DockerFile  Makefile  README.md  conftest.py  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml  test-and-deploy.yml
task_manager/: asgi.py  urls.py  wsgi.py
task_manager/api/: filters.py
task_manager/api/tests/: utils.py
task_manager/apps/login/: admin.py  apps.py  constants.py  managers.py  models.py
task_manager/apps/login/api/v1/: serializers.py
task_manager/apps/login/api/v1/tests/: conftest.py  test_views.py
task_manager/apps/login/migrations/: 0001_initial.py  0002_useraccount_role.py  0003_alter_useraccount_role.py  0004_alter_useraccount_gender.py
task_manager/apps/login/tests/: factories.py
task_manager/apps/tasks/: admin.py  apps.py  constants.py  models.py
task_manager/apps/tasks/api/: filters.py
task_manager/apps/tasks/api/v1/: serializers.py
task_manager/apps/tasks/migrations/: 0001_initial.py  0002_rename_name_task_title_alter_task_status.py
task_manager/common/db/: behaviours.py
task_manager/conf/settings/: common.py
task_manager/deploy/nginx/: task_manager.conf
task_manager/deployment/nginx/: DockerFile  task_manager.conf
